# Top-Down-Game-SFML

./: .gitignore  CMakeLists.txt  CMakePresets - Copy.json  CMakePresets.json  README.md  res.lnk
res/world/TiledProjs/: Grass.tsx  test.tiled-session  untitled.tmx
src/: Camera.cpp  Camera.h  Character.h  Entity.cpp  Entity.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Level.cpp  Level.h  Player.cpp  Player.h  main.cpp
src/util/: Input.h  ResourceManager.cpp  ResourceManager.h
